--- a/src/Application/Pages/Account/AdicionarUsuarios.css
+++ b/src/Application/Pages/Account/AdicionarUsuarios.css
@@ -108,6 +108,9 @@
 }
 
 @media only screen and (max-width: 1024px) {
+  .div-sub-add-new-user-input-area label {
+    width: 90%; 
+  }
   .div-sub-add-new-user-input-area {
     display: flex;
     flex-direction: column;
@@ -116,6 +119,7 @@
     display: flex;
     flex-direction: column;
     height: max-content;
+    width: 90%;
   }
 }
 
@@ -156,3 +160,5 @@
 .CONFIRMEMAIL-FIELD-CLASS {
   grid-area: 4/4/4/7;
 }
+
+
