--- a/src/Application/Components/Main/MenuSuperior.css
+++ b/src/Application/Components/Main/MenuSuperior.css
@@ -1,209 +1,141 @@
-.main-div-menu-deactived {
-  top: 10vh;
-  opacity: 0%;
-  height: 0%;
-  z-index: -1;
-  cursor: none;
-  position: absolute;
-  width: 100%;
-  transition: 0.5s;
-}
-.main-div-menu-deactived div {
-  opacity: 0%;
-  height: 0%;
-  transition: 0.5s;
-}
-.main-div-menu {
+.div-main-menu-superior {
   font-family: NotoSans-Regular;
-  z-index: 999;
   position: fixed;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 20% 1fr;
+  z-index: 11;
+  display: flex;
   width: 95vw;
   top: 10vh;
+  height: 35vh;
   background-color: #f5f5f5;
   box-shadow: 5px 5px 10px #999999;
-  border-radius: 10px;
-  margin-left: 2.5vw;
-  height: 35vh;
-  transition: 300ms;
+  border-radius: 0px 0px 10px 10px;
+  transition: 200ms;
+  left: 2.5vw;
 }
 
-.main-div-menu div {
-  padding: 0;
-  margin: 0;
-  height: 100%;
+/* DEACTIVED MENU  - start*/
+
+.div-main-menu-superior-deactived {
+  position: absolute;
+  width: 95vw;
+  left: 2.5vw;
+  top: 0vh;
+  opacity: 0%;
+  height: 0%;
+  z-index: -99;
+  cursor: none;
+  transition: 200ms;
 }
-.main-h1-menu {
-  padding: 0;
-  margin: 0;
-  border-radius: 5px;
+
+/* DEACTIVED MENU - end*/
+
+.div-main-dados-menu-superior {
+  display: grid;
+  width: 100%;
+  grid-template-columns: 65% 1fr;
+  grid-template-rows: 1fr 75% 1fr;
+  height: auto;
+}
+
+.div-menu-superior-title {
+  display: flex;
   z-index: 11;
   box-shadow: 5px 5px 10px #999999;
   background-color: #25b099;
   color: #ffffff;
-  display: flex;
-  align-items: center;
+  width: 100%;
+  height: 100%;
+  grid-area: 1/1/1/3;
   justify-content: center;
 }
-.main-h1-menu h1 {
-  margin: 0;
-  font-size: 1.2rem;
-  color: #ffffff;
-}
 
-.main-div-dados-menu {
-  display: grid;
-  width: auto;
-  grid-template-columns: 65% 1fr;
-  border-radius: 10px;
-  height: auto;
-}
-
-.colab-div-menu {
+.div-prestador-menu-superior {
   display: flex;
+  grid-area: 2/1/4/2;
+  color:#414141;
   width: 100%;
-  border-radius: 0px 0px 10px 0px;
+  height: 100%;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.colab-div-menu ul li {
-  width: 33.3%;
-  margin: 3%;
-}
-
-.colab-div-menu,
-.colab-div-menu ul li h2,
-.colab-div-menu ul li h4 {
+.div-colaborador-menu-superior {
   color: #ffff;
+  display: flex;
+  grid-area: 2/2/4/3;
+  border-radius: 0px 0px 10px 0px;
+  width: 100%;
+  height: 100%;
+  justify-content: space-around;
+  align-items: center;
   background-color: #25b099;
 }
 
-.prestador-div-menu ul li,
-.prestador-div-menu ul h2 {
-  list-style: none;
-  margin: 2% 2% 2% 2%;
-  font-size: 1rem;
-  font-weight: lighter;
-  color: #474747;
-}
-.prestador-div-menu ul,
-.colab-div-menu ul {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  height: 100%;
-  align-items: center;
+.div-button-back-menu-superior {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.prestador-div-menu {
-  border-radius: 10px;
-  height: 100%;
-  background-color: #f5f5f5;
-}
-.main-div-menu div li h4 {
-  width: 100%;
-  font-size: 1rem;
-  margin: 3%;
-}
-.main-div-menu div li h2 {
-  width: 100%;
-  font-size: 1.1rem;
-  font-weight: bold;
-  margin: 1%;
-}
-.img-back {
   position: absolute;
-  bottom: 0;
-  left: 47%;
-  display: flex;
-}
-.main-div-menu img {
+  grid-area: 3/1/3/2;
   cursor: pointer;
+  margin: 0 auto;
+  bottom: 0;
+  padding: 0;
+  right: 45%;
 }
-.span-buttons {
+
+.div-user-menu-superior a {
+  text-decoration: underline;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+}
+
+.span-buttons-close {
   display: none;
 }
 
 @media only screen and (max-width: 1024px) {
-  .span-buttons {
+  .div-main-menu-superior {
+    top: 0;
+    width: 100vw;
     display: flex;
-    margin-top: 1em;
     flex-direction: row;
+    position: absolute;
+    transition: 0.5s;
+    z-index: 999;
+    height: max-content;
+    left: 0;
+    height: auto;
+    text-align: center;
+  }
+  .div-main-dados-menu-superior {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .div-prestador-menu-superior {
+    display: flex;
+    flex-direction: column;
+  }
+  .div-colaborador-menu-superior {
+    display: flex;
+    flex-direction: column;
+  }
+  .div-button-back-menu-superior {
+    display: none;
+  }
+  .div-menu-superior-title {
+    display: flex;
+    flex-direction: column;
+    border-radius: 0;
+  }
+  .span-buttons-close {
+    display: flex;
     align-self: center;
     align-content: center;
     align-items: center;
+    margin-bottom: 3%;
   }
-  .span-buttons button {
-    margin: 2%;
-  }
-  .main-h1-menu {
-    display: flex;
-    flex-direction: column;
-  }
-  .main-div-menu {
-    top: 0;
-    display: grid;
-    grid-template-columns: 1fr;
-    transition: 0.5s;
-    z-index: 999;
-    height: auto;
-  }
-  .main-div-dados-menu {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    height: auto;
-  }
-  .main-div-dados-menu ul {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  .prestador-div-menu {
-    height: 100%;
-    background-color: #f5f5f5;
-  }
-
-  .colab-div-menu {
-    height: 100%;
-    background-color: #25b099;
-  }
-
-  .colab-div-menu ul li,
-  .prestador-div-menu ul li {
-    display: flex;
-    flex-direction: column;
-    margin: 0.6em auto;
-    width: 100%;
-    align-content: center;
-    align-items: center;
-    text-align: center;
-  }
-
-  .main-div-menu,
-  .main-div-dados-menu,
-  .colab-div-menu {
-    width: 100%;
-    margin: 0 auto;
-    border-radius: 0;
-    box-shadow: none;
-  }
-  .img-back {
-    display: none;
-  }
-  .main-h1-menu div,
-  .main-h1-menu h1,
-  .main-h1-menu {
-    height: 10%;
-  }
-  .colab-section-user {
-    display: none;
+  .span-buttons-close button {
+    margin: 3%;
   }
 }
