--- a/src/Application/Components/Sub/Info.css
+++ b/src/Application/Components/Sub/Info.css
@@ -14,7 +14,6 @@
     z-index: 1;
   }
   .info-label{
-    display: flex;
     align-items: center;
     justify-content: space-evenly;
     color: #c1c1c1;
@@ -41,12 +40,12 @@
       font-size: 1em;
       background-color: #474747;
       position: absolute;
-      opacity: 0;
       max-width: 180px;
       height: max-content;
       border-radius: 10px 10px 10px 0px;
       transform: translateY(-95px);
       margin-left: 120px;
       z-index: -999;
+      display: none;
     }
   }
