--- a/src/Application/Pages/Account/Perfil.css
+++ b/src/Application/Pages/Account/Perfil.css
@@ -1,9 +1,38 @@
 .div-main-perfil {
-  top: 0;
-  position: absolute;
+  position: relative;
   display: flex;
   flex-direction: column;
-  margin: 5%;
-  height: 100%;
-  justify-content: center;
+  min-height: 80vh;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.div-adjusts-user-inputs-area {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 2%;
+  margin: 0 auto;
+}
+
+.form-adjusts-use {
+  width: 96%;
+  margin: 0 auto;
+  padding-top: 3%;
+}
+
+.div-sub-adjusts-user-button-area {
+  display: flex;
+  width: 100%;
+}
+
+.form-adjusts-use button {
+  margin: 10% auto;
+}
+
+@media only screen and (max-width: 1024px) {
+  .div-adjusts-user-inputs-area {
+    display: flex;
+    flex-direction: column;
+  }
 }
