--- a/src/Application/Components/Main/MenuSuperior.css
+++ b/src/Application/Components/Main/MenuSuperior.css
@@ -52,10 +52,10 @@
 .div-prestador-menu-superior {
   display: flex;
   grid-area: 2/1/4/2;
-  color:#414141;
+  color: #414141;
   width: 100%;
   height: 100%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -66,7 +66,7 @@
   border-radius: 0px 0px 10px 0px;
   width: 100%;
   height: 100%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   background-color: #25b099;
 }
@@ -87,6 +87,9 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+}
+.div-user-menu-superior img {
+width: 50px;
 }
 
 .span-buttons-close {
@@ -137,5 +140,22 @@
   }
   .span-buttons-close button {
     margin: 3%;
+  }
+}
+
+@media only screen  and (min-width:1500px) {
+  .div-main-menu-superior {
+    font-family: NotoSans-Regular;
+    position: fixed;
+    z-index: 11;
+    display: flex;
+    width: 95vw;
+    top: 10vh;
+    height: 25vh;
+    background-color: #f5f5f5;
+    box-shadow: 5px 5px 10px #999999;
+    border-radius: 0px 0px 10px 10px;
+    transition: 200ms;
+    left: 2.5vw;
   }
 }
