--- a/src/Application/Pages/Main/Help.css
+++ b/src/Application/Pages/Main/Help.css
@@ -48,3 +48,32 @@
         width: 23%;
     }
 }
+
+@media  only screen and (max-width:1024px) {
+    .div-sub-main-help {
+        margin-bottom: 5%;
+        margin-top: 5%;
+        display: flex;
+        flex-direction: column;
+        width: 96%;
+    }
+    .div-sub-img-help img {
+        width: 100px;
+        animation-name: none;
+ 
+    }
+    .div-sub-txt-help {
+        display: flex;
+        width: 100%;   
+        flex-direction: column;
+        align-items: center;
+    }
+    .div-sub-img-help {
+        display: flex;
+        width: 100%;
+        justify-content: center; 
+        border: none;
+    }
+
+    
+}
