Status Page was DONE

--- a/src/Application/Pages/Main/RecoverSucessful.css
+++ b/src/Application/Pages/Main/RecoverSucessful.css
@@ -30,6 +30,7 @@
 }
 .div-sub-recover-sucessfull h1 {
   padding: 0.8rem;
+  line-height: 1.8rem;
 }
 .div-main-recover-sucessfull button {
   align-self: center;
