--- a/src/Application/Pages/Account/Status.css
+++ b/src/Application/Pages/Account/Status.css
@@ -2,6 +2,61 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  height: auto;
+  min-height: 80vh;
   width: 100%;
+}
+.div-main-status a  {
+  display: flex;
+ width: 100%;
+ justify-content: center;
+ margin: 5% auto;
+}
+.div-sub-box-color-status{
+  width: 80px;
+  height: 80px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px #999999;
+  background-color: #A6A6A6;
+  margin-bottom: 50px;
+
+}
+.div-sub-box-color-status-main{
+  width: 100%;
+  margin: 5% auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.div-sub-box-color-status-main label{
+color: #A6A6A6;
+}
+
+.Concluido{
+  transition: 300ms;
+  background-color: #38C6AE;
+}
+
+.Aguardando{
+  transition: 300ms;
+  background-color: #FDFF12;  
+}
+
+.div-sub-status{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  margin-top: 3%;
+  
+}
+.div-sub-status h1{
+font-size: 1.6em;
+color: #A6A6A6;
+line-height: 1.6em;
+text-align: center;
+  
+}
+
+.img-status{
+  width: 100px;
 }
