--- a/src/Application/Pages/Account/Status.css
+++ b/src/Application/Pages/Account/Status.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  min-height: 80vh;
+  height: 100%;
   width: 100%;
 }
 .div-main-status a  {
@@ -22,7 +22,7 @@
 }
 .div-sub-box-color-status-main{
   width: 100%;
-  margin: 5% auto;
+  margin: 3% auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -46,7 +46,8 @@ color: #A6A6A6;
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin-top: 3%;
+  height: 100%;
+  justify-content: center;
   
 }
 .div-sub-status h1{
