--- a/src/Application/Components/Sub/Input.css
+++ b/src/Application/Components/Sub/Input.css
@@ -26,7 +26,8 @@
   width: 400px;
   height: auto;
   z-index: 99;
-}
+} 
+
 
 .input:hover, .input:focus {
   outline: none;
@@ -65,11 +66,12 @@
 }
 
 @media only screen and (max-width:1024px) {
-  .p-input {
+  .p-input   {
     position: absolute;
     right: 0%;
     width: 80%;
     z-index: 99;
+    transform: translate(0px , -60px);
   }
   .input-img {
     display: flex;
@@ -84,6 +86,6 @@
   .p-input {
     width: 300px;
     margin: 0 auto;
-    transform: translateY(-20px);
+    transform: translate(150px , -50px);
   }
 }
