--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ input{
   height: 25px;
   width: 25px;
   border-radius: 7px;
-  background-color: #eee;
+  background-color: #ebebeb;
 }
 
 .GENERAL-CHECKBOX-CLASS:hover input~.checkmark {
