--- a/src/Application/Components/Sub/Succesfull.css
+++ b/src/Application/Components/Sub/Succesfull.css
@@ -5,11 +5,12 @@
     width: 100vw;
     height: auto;
     background-color: rgba(0, 0, 0, 0.329);
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 99999999;
 }
 
 
