--- a/src/Application/Pages/Account/Functionalities/PriceTable.css
+++ b/src/Application/Pages/Account/Functionalities/PriceTable.css
@@ -1,8 +1,90 @@
-.div-main-table-price {
+.div-main-priceTable {
     font-family: NotoSans-Regular;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    margin-top: 10vh;
+    position: relative;
+    display: flex;
+    flex-direction: column;
     min-height: 80vh;
+    width: 100%;
+}
+
+.div-main-priceTable a {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin: 5% auto;
+}
+
+.div-sub-box-color-priceTable {
+    width: 80px;
+    height: 80px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px #999999;
+    background-color: #A6A6A6;
+    margin-bottom: 50px;
+}
+
+.div-sub-box-color-priceTable-main {
+    width: 100%;
+    margin: 3% auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.div-sub-box-color-priceTable-main label {
+    color: #A6A6A6;
+}
+
+.Concluido {
+    transition: 300ms;
+    background-color: #38C6AE;
+}
+
+.Aguardando {
+    transition: 300ms;
+    background-color: #FDFF12;
+}
+
+.div-sub-priceTable {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.div-sub-priceTable h1 {
+    font-size: 1.6em;
+    color: #A6A6A6;
+    line-height: 1.6em;
+    text-align: center;
+}
+
+.img-priceTable {
+    width: 100px;
+}
+
+.div-main-priceTable input {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.div-sub-solicite-priceTable {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+.div-sub-solicite-priceTable button {
+    margin: 3% auto;
+}
+
+.div-sub-priceTable h4{
+    cursor: pointer;
+    color: #414141;
+    text-decoration: underline;
 }
