--- a/src/Application/Components/Sub/Input.css
+++ b/src/Application/Components/Sub/Input.css
@@ -9,7 +9,7 @@
 
 .p-error-null {
   position: absolute;
-  z-index: 0;
+  z-index: 999999999999999;
   width: 0;
   height: 0;
   opacity: 0;
@@ -24,9 +24,8 @@
   background-color: #E20000;
   border-radius: 10px 10px 10px 0px;
   box-shadow: 10px 10px 10px 0px #E1E1E1;
-  width: 400px;
-  height: auto;
-  z-index: 99;
+  z-index: 999 ;
+  transform: translate(0px , -60px)
 } 
 
 
@@ -136,7 +135,7 @@
     position: absolute;
     right: 0%;
     width: 80%;
-    z-index: 99;
+    z-index: 999999999999;
     transform: translate(0px , -60px);
   }
   .input-img {
@@ -145,13 +144,5 @@
     position: absolute;
     margin-top: 15%;
     width: 25px
-  }
-}
-
-@media only screen and (min-width:1280px) {
-  .error-input {
-    width: 300px;
-    margin: 0 auto;
-    transform: translate(0px , -80px);
   }
 }
