--- a/src/Application/Pages/Account/Add User/Forms.module.css
+++ b/src/Application/Pages/Account/Add User/Forms.module.css
@@ -4,6 +4,7 @@
     grid-template-rows: 1fr 1fr 1fr 1fr;
     gap: 2%;
     margin: 0 auto;
+    z-index: -9999;
 }
 
 .form label[class~="NAME-FIELD-CLASS"] {
@@ -16,6 +17,7 @@
 
 .form label[class~="DEPARTMENT-FIELD-CLASS"] {
     grid-area: 2/5/2/7;
+    
 }
 
 .form label[class~="TELPHONE-FIELD-CLASS"] {
@@ -48,3 +50,6 @@
         flex-direction: column;
     }
 }
+
+
+  
