--- a/src/Application/Components/Sub/Input.css
+++ b/src/Application/Components/Sub/Input.css
@@ -1,4 +1,5 @@
 
+
 .input-div {
   color: #474747;
   font-size: 1em;
@@ -25,9 +26,9 @@
   background-color: #E20000;
   border-radius: 10px 10px 10px 0px;
   box-shadow: 10px 10px 10px 0px #9b9090;
-  transform: translate(0px , -80px);
-} 
-
+  transform: translate(0px, -60px);
+  z-index: 999999999 !important;
+}
 
 .input:hover, .input:focus {
   outline: none;
@@ -49,6 +50,7 @@
   color: #474747;
   width: 100%;
   padding: 0;
+  z-index: 0;
 }
 
 .input-div {
@@ -64,8 +66,6 @@
 .inputClick {
   background-color: #38C6AE;
 }
-
-
 
 .GENERAL-CHECKBOX-CLASS {
   display: block;
@@ -129,13 +129,13 @@
   transform: rotate(45deg);
 }
 
-
 @media only screen and (max-width:1024px) {
-  .error-input   {
+  .error-input {
     position: absolute;
     right: 0%;
     width: 80%;
-    transform: translate(0px , -60px);
+    transform: translate(0px, -60px);
+    z-index: 99999;
   }
   .input-img {
     display: flex;
@@ -145,3 +145,4 @@
     width: 25px
   }
 }
+
