changes on profile

--- a/src/Application/Pages/Account/Add User/Forms.module.css
+++ b/src/Application/Pages/Account/Add User/Forms.module.css
@@ -12,23 +12,16 @@
 }
 
 .form label[class~="CPF-FIELD-CLASS"] {
-    grid-area: 1/5/1/7;
-}
-
-.form label[class~="DEPARTMENT-FIELD-CLASS"] {
-    grid-area: 2/5/2/7;
-    
-}
-
-.form label[class~="TELPHONE-FIELD-CLASS"] {
     grid-area: 2/1/2/3;
 }
 
 .form label[class~="CELPHONE-FIELD-CLASS"] {
     grid-area: 2/3/2/5;
 }
-
-.form label[class~="PASSWORD-FIELD-CLASS"] {
+.form label[class~="DEPARTMENT-FIELD-CLASS"] {
+    grid-area: 2/5/2/7;    
+}
+ .form label[class~="PASSWORD-FIELD-CLASS"] {
     grid-area: 3/1/3/4;
 }
 
@@ -42,7 +35,10 @@
 
 .form label[class~="CONFIRMEMAIL-FIELD-CLASS"] {
     grid-area: 4/4/4/7;
-}
+} 
+/* .form label[class~="TELPHONE-FIELD-CLASS"] {
+    grid-area: 2/1/2/3;
+} */
 
 @media only screen  and (max-width:1024px){
     .form{
