Alteração Sistemática de Acesso

--- a/src/Application/Components/Sub/Input.css
+++ b/src/Application/Components/Sub/Input.css
@@ -23,7 +23,7 @@
   position: absolute;
   transition: 300ms;
   color: #ffff;
-  background-color: #E20000;
+  background-color: #FDAB15;
   border-radius: 10px 10px 10px 0px;
   box-shadow: 10px 10px 10px 0px #9b9090;
   transform: translate(0px, -60px);
